--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,7 +1,7 @@
 #projects {
   padding-left: 15%;
   padding-right: 25%;
-  min-height: 60vh;  
+  min-height: 800px;  
 }
 
 .projects-grid {
@@ -29,12 +29,12 @@
   padding-top: 0.8rem;
   padding-left: 0.8rem;
   padding-right: 0.8rem;  
-  border-radius: 3px;
+  border-radius: 8px;
   border: 0.7px solid black;
 }
 
 .project-container img {
-  border-radius: 3px;
+  border-radius: 8px;
   margin-bottom: 0.8rem;
   width: 100%;
   height: 100%;
